# drone_simulation

./: .bazelrc  .editorconfig  .gitattributes  .gitignore  Dockerfile  README.md  WORKSPACE.bazel  dev_guide.md
.devcontainer/: devcontainer.json
.github/workflows/: bazel_build.yml  build.yml  docker_build.yml
apps/map_viewer/: BUILD.bazel  README.md  draw_map.cc  draw_map.h  image.h  main.cc
apps/pathfinding_viewer/: BUILD.bazel
apps/pathing_visualizer/: BUILD.bazel  main.cc
apps/routing_viewer/: BUILD.bazel
apps/simulation_visualizer/: BUILD.bazel  load_models.cc  load_models.h  main.cc  mode_instructions.h  mode_render.h  populate_simulation.cc  populate_simulation.h
apps/transit_service/: BUILD.bazel  main.cc  old.cc
apps/transit_service/web/: schedule.html
apps/transit_service/web/scenes/: umn.json
apps/transit_web/assets/model/: dragon.glb
apps/transit_web/js/: main.js
blender/: GOOGLE_SAT_WM.tif  GOOGLE_SAT_WM.wld  blender.md  srtm.tif  srtm_bgis.tif  srtm_bgis.wld  umn.blend
dependencies/: 0001-update-RL_CULL_DISTANCE_FAR.patch  0002-update-CAMERA_MOVE_SPEED.patch  BUILD.libexpat.bazel  BUILD.libosmium.bazel  BUILD.lodepng.bazel  BUILD.raygui.bazel  BUILD.raylib.bazel
libs/blender/: README.md
libs/geometry/: BUILD.bazel  bounding_box.cc  bounding_box.h  bounding_box.test.cc  color.cc  color.h  color.test.cc  distance_function.cc  distance_function.h  distance_function.test.cc  image.cc  image.h  point3f.cc  point3f.h  point3f.test.cc  vector3f.cc  vector3f.h  vector3f.test.cc
libs/maps/: BUILD.bazel  graph.cc  graph.h  graph_node.cc  graph_node.h  osm_graph.cc  osm_graph.h
libs/routing/: BUILD.bazel  astar.h  depth_first_search.h  dijkstra.h  pathing.cc  routing_strategy.h
libs/simulation/: BUILD.bazel  IBuilder.h  IController.h  IEntity.h  IFactory.h  IStrategy.h  SimulationModel.cc  SimulationModel.h  main.cc  simulationModel.cc  simulationModel.h  simulation_model.cc  simulation_model.h
libs/simulation/builders/: all.h  dragon_builder.h  drone_builder.h  helicopter_builder.h  human_builder.h  robot_builder.h
libs/simulation/decorators/: CelebrationDecorator.cc  CelebrationDecorator.h  JumpDecorator.cc  JumpDecorator.h  SpinDecorator.cc  SpinDecorator.h  battery_decorator.cc  battery_decorator.h  celebrationDecorator.cc  celebrationDecorator.h  celebration_decorator.cc  celebration_decorator.h  jumpDecorator.cc  jumpDecorator.h  jump_decorator.cc  jump_decorator.h  spinDecorator.cc  spinDecorator.h  spin_decorator.cc  spin_decorator.h
libs/simulation/entities/: Dragon.cc  Dragon.h  Drone.h  Helicopter.cc  Helicopter.h  Human.cc  Robot.h  dragon.cc  dragon.h  drone.cc  drone.h  helicopter.cc  helicopter.h  human.cc  human.h  robot.cc  robot.h
libs/simulation/factories/: dragon_factory.h  drone_factory.h  helicopter_factory.h  human_factory.h  robot_factory.h
libs/simulation/movement_strategies/: AstarStrategy.cc  AstarStrategy.h  BeelineStrategy.cc  BeelineStrategy.h  DfsStrategy.cc  DijkstraStrategy.cc  PathStrategy.cc  PathStrategy.h  astarStrategy.cc  astarStrategy.h  beelineStrategy.cc  beelineStrategy.h  dfsStrategy.cc  dfsStrategy.h  dijkstraStrategy.cc  dijkstraStrategy.h  pathStrategy.cc  pathStrategy.h
libs/simulation/strategies/: astar_strategy.cc  astar_strategy.h  beeline_strategy.cc  beeline_strategy.h  dfs_strategy.cc  dfs_strategy.h  dijkstra_strategy.cc  dijkstra_strategy.h  path_strategy.cc  path_strategy.h
libs/transit/include/: Dragon.h  DragonFactory.h  Helicopter.h  HelicopterFactory.h  Human.h  HumanFactory.h  IEntity.h
libs/transit/src/: BeelineStrategy.cc  Dragon.cc  Helicopter.cc  HelicopterFactory.cc  Human.cc  PathStrategy.cc  SimulationModel.cc
