workspace(name = "drone_simulation")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "com_google_googletest",
    branch = "v1.13.x",
    remote = "https://github.com/google/googletest",
)

git_repository(
    name = "org_osmcode_libosmium",
    branch = "v2.19.0",
    build_file = "//dependencies:BUILD.libosmium.bazel",
    remote = "https://github.com/osmcode/libosmium",
)

git_repository(
    name = "lvandeve_lodepng",
    branch = "master",
    build_file = "//dependencies:BUILD.lodepng.bazel",
    remote = "https://github.com/lvandeve/lodepng",
)

git_repository(
    name = "org_libexpat_libexpat",
    branch = "master",
    build_file = "//dependencies:BUILD.libexpat.bazel",
    remote = "https://github.com/libexpat/libexpat",
)

git_repository(
    name = "raysan5_raylib",
    branch = "master",
    build_file = "//dependencies:BUILD.raylib.bazel",
    patch_args = ["-p1"],
    patches = [
        "//dependencies:0001-update-RL_CULL_DISTANCE_FAR.patch",
        "//dependencies:0002-update-CAMERA_MOVE_SPEED.patch",
    ],
    remote = "https://github.com/raysan5/raylib",
)

# https://github.com/hedronvision/bazel-compile-commands-extractor
http_archive(
    name = "hedron_compile_commands",
    strip_prefix = "bazel-compile-commands-extractor-b33a4b05c2287372c8e932c55ff4d3a37e6761ed",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/b33a4b05c2287372c8e932c55ff4d3a37e6761ed.tar.gz",
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()

# https://github.com/bazelbuild/rules_foreign_cc
http_archive(
    name = "rules_foreign_cc",
    strip_prefix = "rules_foreign_cc-c6980bc2a28f86562f62bcd8242dce5dfb9d0175",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/c6980bc2a28f86562f62bcd8242dce5dfb9d0175.tar.gz",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()
