load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "all_srcs",
    srcs = glob(
        include = ["**"],
        exclude = ["*.bazel"],
    ),
    visibility = ["//visibility:private"],
)

cmake(
    name = "org_libexpat_libexpat",
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Release",
        "EXPAT_SHARED_LIBS": "OFF",
        "EXPAT_BUILD_DOCS": "OFF",
        "EXPAT_BUILD_TOOLS": "OFF",
        "EXPAT_BUILD_TESTS": "OFF",
        "EXPAT_BUILD_FUZZERS": "OFF",
        "EXPAT_BUILD_EXAMPLES": "OFF",
    },
    generate_args = select({
        "@platforms//os:windows": [
            "-G \"NMake Makefiles\"",
        ],
        "//conditions:default": None,
    }),
    lib_source = ":all_srcs",
    out_static_libs = select({
        "@platforms//os:osx": ["libexpat.a"],
        "@platforms//os:linux": ["libexpat.a"],
        "@platforms//os:windows": ["libexpatMD.lib"],
    }),
    visibility = ["//visibility:public"],
    working_directory = "expat",
    alwayslink = True,
)
