load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "all_srcs",
    srcs = glob(
        include = ["**"],
        exclude = ["*.bazel"],
    ),
    visibility = ["//visibility:private"],
)

cmake(
    name = "raysan5_raylib",
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Release",
        "BUILD_EXAMPLES": "OFF",
        "SUPPORT_GESTURES_SYSTEM": "OFF",
    },
    generate_args = select({
        "@platforms//os:windows": [
            "-G \"NMake Makefiles\"",
        ],
        "//conditions:default": None,
    }),
    lib_source = ":all_srcs",
    linkopts = select({
        "@platforms//os:windows": [
            "winmm.lib",
            "gdi32.lib",
            "user32.lib",
            "shell32.lib",
        ],
        "@platforms//os:osx": [
            "-framework",
            "Cocoa",
        ],
        "@platforms//os:linux": ["-ldl"],
    }),
    out_static_libs = select({
        "@platforms//os:osx": ["libraylib.a"],
        "@platforms//os:linux": ["libraylib.a"],
        "@platforms//os:windows": ["raylib.lib"],
    }),
    visibility = ["//visibility:public"],
)
