load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

# bazelisk run //apps/map_viewer
cc_binary(
    name = "map_viewer",
    srcs = [
        "main.cc",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":map_drawer",
        "//libs/geometry",
        "//libs/maps",
    ],
)

# bazelisk build //apps/map_viewer:map_drawer
cc_library(
    name = "map_drawer",
    srcs = ["draw_map.cc"],
    hdrs = ["draw_map.h"],
    visibility = ["//apps:__subpackages__"],
    deps = [
        "//libs/geometry",
        "//libs/maps",
    ],
)
