load("@rules_cc//cc:defs.bzl", "cc_binary")

# bazelisk run //apps/pathing_visualizer
cc_binary(
    name = "pathing_visualizer",
    srcs = [
        "main.cc",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//apps/map_viewer:map_drawer",
        "//libs/geometry",
        "//libs/maps",
        "//libs/routing",
    ],
)
