load("@rules_cc//cc:defs.bzl", "cc_binary")

# bazelisk run //apps/simulation_visualizer
cc_binary(
    name = "simulation_visualizer",
    srcs = glob([
        "**/*.h",
        "**/*.cc",
    ]),
    data = glob([
        "models/**/*",
        "textures/**/*",
    ]),
    visibility = ["//visibility:private"],
    deps = [
        "//libs/geometry",
        "//libs/maps",
        "//libs/routing",
        "//libs/simulation",
        "@bazel_tools//tools/cpp/runfiles",
        "@raysan5_raygui",
        "@raysan5_raylib",
    ],
)
