load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# bazelisk build //libs/geometry:geometry
cc_library(
    name = "geometry",
    srcs = [
        "bounding_box.cc",
        "color.cc",
        "distance_function.cc",
        "point3f.cc",
        "vector3f.cc",
    ],
    hdrs = glob(["**/*.h"]),
    visibility = [
        "//visibility:public",
    ],
)

# bazelisk test --test_output=all //libs/geometry:geometry_test
cc_test(
    name = "geometry_test",
    size = "small",
    srcs = glob([
        "**/*.h",
        "**/*.test.cc",
    ]),
    visibility = [
        "//visibility:private",
    ],
    deps = [
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
