load("@rules_cc//cc:defs.bzl", "cc_library")

# bazelisk build //libs/maps
cc_library(
    name = "maps",
    srcs = glob(["**/*.cc"]),
    hdrs = glob(["**/*.h"]),
    data = glob(["data/**/*.osm"]),
    visibility = ["//visibility:public"],
    deps = [
        "//libs/geometry",
        "@org_osmcode_libosmium",
    ],
)
