load("@rules_cc//cc:defs.bzl", "cc_library")

# bazelisk build //libs/simulation
cc_library(
    name = "simulation",
    srcs = glob(["**/*.cc"]),
    hdrs = glob(["**/*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "//libs/geometry",
        "//libs/maps",
        "//libs/routing",
    ],
)
