load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

# bazelisk build //libs/simulation
cc_library(
    name = "simulation",
    srcs = glob(["**/*.cc"]),
    hdrs = glob(["**/*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "//libs/geometry",
        "//libs/maps",
        "//libs/routing",
    ],
)

# bazelisk run //libs/simulation:example
cc_binary(
    name = "example",
    srcs = glob([
        "**/*.cc",
        "**/*.h",
    ]),
    visibility = ["//visibility:private"],
    deps = [
        "//libs/geometry",
        "//libs/maps",
        "//libs/routing",
    ],
)
